[FIX] Image Stretch

--- a/styles/0/teams/Team.module.scss
+++ b/styles/0/teams/Team.module.scss
@@ -443,6 +443,7 @@
                 height: 3rem;
 
                 border-radius: 50%;
+                object-fit: cover;
             }
 
             p {
